fixing broken css

--- a/themes/ucb/scss/components/_express.scss
+++ b/themes/ucb/scss/components/_express.scss
@@ -101,7 +101,7 @@ html.js input.throbbing {
 
  // Mega Menu
  #navigation {
-   position: re
+   position: relative;
 
  }
  li.mega-menu-link {
